tests/rand/08-fail-for-struct-enum.stderr
error[E0404]: expected trait, found struct `String`
 --> tests/rand/08-fail-for-struct-enum.rs:7:19
  |
7 |         contents: String
  |                   ^^^^^^ help: a trait with a similar name exists: `ToString`
  |
 ::: $RUST/alloc/src/string.rs
  |
  | pub trait ToString {
  | ------------------ similarly named trait `ToString` defined here

error[E0658]: associated type bounds are unstable
 --> tests/rand/08-fail-for-struct-enum.rs:7:9
  |
7 |         contents: String
  |         ^^^^^^^^^^^^^^^^
  |
  = note: see issue #52662 <https://github.com/rust-lang/rust/issues/52662> for more information

error[E0533]: expected value, found struct variant `Messages::Letter`
 --> tests/rand/08-fail-for-struct-enum.rs:4:10
  |
4 |   pub enum Messages {
  |  __________^
5 | |     Email,
6 | |     Letter {
  | |__________^ not a value

error[E0229]: associated type bindings are not allowed here
 --> tests/rand/08-fail-for-struct-enum.rs:7:9
  |
7 |         contents: String
  |         ^^^^^^^^^^^^^^^^ associated type not allowed here
